@@ -20,6 +20,7 @@
 - Fixed unexpected non-unique salts in multi-hash cracking in Bitcoin/Litecoin wallet.dat module which lead to false negatives
 - Fixed rare case of misalignment of the status prompt when other user warnings are shown within the hashcat output
 - Fixed password reassembling for cracked hashes on host for slow hashes in optimized mode that are longer than 32 characters
+- Fixed incorrect maximum password length support for -m 400 in optimized mode (reduced from 55 to 39)
 
 ##
 ## Improvements
